--- a/TestCalendar/Test Calendar/Setting.storyboard
+++ b/TestCalendar/Test Calendar/Setting.storyboard
@@ -83,11 +83,7 @@
                                                             <!--2017-09-04 07:53:13 +0000-->
                                                         </date>
                                                         <connections>
-                                                            <action selector="MDatePicker:" destination="qdv-t9-Pcw" eventType="valueChanged" id="Ufp-y6-Hux"/>
-                                                            <action selector="mChangeDAte:" destination="qdv-t9-Pcw" eventType="valueChanged" id="hdE-f1-I8D"/>
                                                             <action selector="mChangeDate:" destination="qdv-t9-Pcw" eventType="valueChanged" id="as1-z7-Pr4"/>
-                                                            <action selector="morningA:" destination="qdv-t9-Pcw" eventType="valueChanged" id="V8T-iK-OBX"/>
-                                                            <action selector="morningDate:" destination="qdv-t9-Pcw" eventType="valueChanged" id="Kkc-ZT-yE1"/>
                                                         </connections>
                                                     </datePicker>
                                                 </subviews>
@@ -139,8 +135,6 @@
                                                         </date>
                                                         <connections>
                                                             <action selector="bTimeChangeDate:" destination="qdv-t9-Pcw" eventType="valueChanged" id="0ol-tY-ESD"/>
-                                                            <action selector="bTimeDatepicker:" destination="qdv-t9-Pcw" eventType="valueChanged" id="02l-iP-WaR"/>
-                                                            <action selector="beforeTimeDatePicker:" destination="qdv-t9-Pcw" eventType="valueChanged" id="kp4-FZ-01g"/>
                                                         </connections>
                                                     </datePicker>
                                                 </subviews>
@@ -222,22 +216,14 @@
                     </view>
                     <connections>
                         <outlet property="AccessTitle" destination="8gD-jQ-5Al" id="ZNB-44-zwN"/>
-                        <outlet property="BTimeChangeDate" destination="WUC-5p-N2x" id="fxI-9x-tp9"/>
                         <outlet property="BTimeDatePicker" destination="WUC-5p-N2x" id="IiG-c9-HKe"/>
-                        <outlet property="MChangeDate" destination="6YE-pO-l1e" id="f28-cK-JDY"/>
                         <outlet property="MDatePicker" destination="6YE-pO-l1e" id="zil-ud-x6E"/>
-                        <outlet property="backButton" destination="pAX-rH-Xx7" id="tEi-4k-VvB"/>
-                        <outlet property="beforeTimeDate" destination="WUC-5p-N2x" id="TBk-9t-OVJ"/>
                         <outlet property="beforeTimeTitle" destination="OYh-kc-EVR" id="AgF-Ig-dak"/>
                         <outlet property="contents" destination="grh-TE-yRP" id="ks6-eX-u6P"/>
                         <outlet property="header" destination="AkY-20-mRZ" id="2D7-RO-Q6W"/>
-                        <outlet property="morning" destination="pV7-Vw-0dc" id="Cv2-HX-wet"/>
-                        <outlet property="morningDate" destination="6YE-pO-l1e" id="zP0-JC-4O3"/>
                         <outlet property="morningTitle" destination="pV7-Vw-0dc" id="P40-gV-Iyy"/>
-                        <outlet property="notification" destination="1pu-od-1DK" id="SmM-Py-bLx"/>
                         <outlet property="notificationTitle" destination="1pu-od-1DK" id="6Ov-T0-Oas"/>
-                        <outlet property="setting" destination="eAJ-wb-fFp" id="jQi-Vv-u1O"/>
-                        <outlet property="title" destination="eAJ-wb-fFp" id="XAr-3n-AeI"/>
+                        <outlet property="settingTitle" destination="eAJ-wb-fFp" id="LnP-x3-3Ge"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0C1-fE-dTa" userLabel="First Responder" sceneMemberID="firstResponder"/>
