--- a/TestCalendar/Test Calendar/Base.lproj/Main.storyboard
+++ b/TestCalendar/Test Calendar/Base.lproj/Main.storyboard
@@ -100,14 +100,10 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Xy0-5s-dSv">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="47.785714285714285" height="25"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-<<<<<<< HEAD
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-=======
-                                            <rect key="frame" x="0.0" y="0.0" width="48" height="25"/>
->>>>>>> 90aed13c751f47c52cdc68d78e2305f0660306e2
+                                            <rect key="frame" x="0.0" y="0.0" width="47.785714285714285" height="25"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
                                     </collectionViewCell>
